--- a/jupyternotebooks/Bestgerade.ipynb
+++ b/jupyternotebooks/Bestgerade.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM29NQEXxLx3GSk0preu6FJ",
+      "authorship_tag": "ABX9TyOXcbxHTr8nBKEEY/t+26rK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Bestgerade\n",
+        "In diesem Notebook wurde eine Puntkewolke basierend auf einer quadratischen Funktion erstellt, die hinterher durch eine Bestgerade repräsentiert werden soll (Regression)."
+      ],
+      "metadata": {
+        "id": "1cbA7NRrNmit"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -103,6 +113,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## y-Achsenabschnit `b`\n",
+        "Welche der Geraden beschreibt die Punktewolke am besten?\n",
+        "\n",
+        "Wie kann ein Gütemaß aussehen?"
+      ],
+      "metadata": {
+        "id": "qNCtu7ATOU73"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "y = [lineareFunktion(1/2, i) for i in [2,-1,4,6]]\n",
@@ -123,7 +145,7 @@
         "id": "DyP2kQToUXAQ",
         "outputId": "f2181fb5-d3c2-4f03-a7fb-1360451c44ea"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -136,6 +158,18 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Steigung `m`\n",
+        "Welche der Geraden beschreibt die Punktewolke am besten?\n",
+        "\n",
+        "Wie kann ein Gütemaß aussehen?"
+      ],
+      "metadata": {
+        "id": "RVwNtuEIOlDq"
+      }
     },
     {
       "cell_type": "code",
@@ -158,7 +192,7 @@
         "id": "FRHapqqHV9JT",
         "outputId": "489455dd-ccc8-4fb5-d88f-2d6cae3c1388"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -171,6 +205,20 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Fehlerfunktionen\n",
+        "Im folgenden Codeblock wurde der MSE-Loss (Mean Squared Error, mittlere quadratische Abweichung) implemenntiert.\n",
+        "\n",
+        "*   `fehlerfunktion`: MSE-Loss\n",
+        "*   `del_fehlerfunktion`: Ableitung des MSE-Losses\n",
+        "*   `fehlerfunktion(funktion, data)`: \"Wie gut ist die Funktion `funktion` an die Daten `data` angepasst?\"\n"
+      ],
+      "metadata": {
+        "id": "Gbh08BTKOqT_"
+      }
     },
     {
       "cell_type": "code",
@@ -210,7 +258,7 @@
         "id": "dgNFdY9emej4",
         "outputId": "0f3a09c8-990d-41ea-92d6-53c4e77c968f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,23 +271,33 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Gradientenabstieg\n",
+        "Im folgenden Codeblock wird Gradientenabstieg genutzt, um den MSE-Loss zu minimieren. Das Ziel ist es, eine lineare Funktion zu finden, die die Punktewolke am besten beschreibt."
+      ],
+      "metadata": {
+        "id": "hJ7rOasTPTBQ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "N = 500\n",
-        "lr = 0.01\n",
+        "N = 500 # Anzahl Epochen\n",
+        "lr = 0.01 # Lernrate\n",
         "\n",
         "fehler = np.zeros(N)\n",
         "funktion = lineareFunktion(-1, 5)\n",
-        "funkliste = []\n",
+        "funkliste = [] # leere Liste zum Speichern von Zwischenergebnissen\n",
         "for i in range(N):\n",
-        "    if i%100==0:\n",
+        "    if i%100==0: # \"Speichere das Zwischenergebnis alle 100 Epochen\"\n",
         "        #print(i)\n",
         "        funkliste.append(funktion.copy())\n",
-        "    d_m, d_b = del_fehlerfunktion(funktion, data)\n",
+        "    d_m, d_b = del_fehlerfunktion(funktion, data) # Ableitungen\n",
         "    #print(d_m, d_b)\n",
-        "    funktion.m -= lr*d_m\n",
-        "    funktion.b -= lr*d_b\n",
-        "    fehler[i] = fehlerfunktion(funktion, data)\n",
+        "    funktion.m -= lr*d_m # Gradientenabstieg für Steigung m\n",
+        "    funktion.b -= lr*d_b # Gradientenabstieg für y-Achsenabschnitt b\n",
+        "    fehler[i] = fehlerfunktion(funktion, data) # Speichere Fehlerwert\n",
         "\n",
         "#print([str(ff) for ff in funkliste])\n",
         "\n",
@@ -264,7 +322,7 @@
         "id": "9D4HTs1Jo65V",
         "outputId": "a47fbf42-fe73-4058-9c63-498a8163f8cd"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
