--- a/jupyternotebooks/Fehlerfunktionen.ipynb
+++ b/jupyternotebooks/Fehlerfunktionen.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPq5A5WRxb9wRkiGWwbPs//",
+      "authorship_tag": "ABX9TyMNZC/Q83utAsWfJ2o159AM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Fehlerfunktionen\n",
+        "Teilnotebook von https://github.com/ollihansen90/linclassifiers/blob/main/jupyternotebooks/Bestgerade.ipynb"
+      ],
+      "metadata": {
+        "id": "5LV3qUBjQZzG"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "BHqe6kURA8VV",
         "outputId": "8d02adc2-1ba6-4f61-fd80-94df9173a2be",
@@ -73,7 +83,7 @@
         "id": "kDEgiDmcBUks",
         "outputId": "91cee8dd-9890-49a3-b9a5-4e03937a6c3b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -107,7 +117,7 @@
         "id": "S0jmBQm3EP1m",
         "outputId": "7b8176c2-a4cc-4e68-84c2-a4dd405f0fc2"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -141,7 +151,7 @@
         "id": "dBtYQ3tXC4Cx",
         "outputId": "f8d51acd-16a2-4c50-dc8d-e29d6b6c0eed"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
