--- a/jupyternotebooks/Geradengenerator.ipynb
+++ b/jupyternotebooks/Geradengenerator.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOyRddnccTWkGoNdpeHxEL9",
+      "authorship_tag": "ABX9TyN1aKvm/M+6wMLnRaWEXzo0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,16 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/ollihansen90/linclassifiers/blob/main/jupyternotebooks/Geradengenerator.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Geraden ablesen\n",
+        "In diesem Notebook werden zufällig Geraden generiert, die abgelesen werden können. Hierbei geht es lediglich um die Gerade selbst, nicht um die Klassifikation (also \"Gleich\" statt \"Größergleich\" im Perzeptron)."
+      ],
+      "metadata": {
+        "id": "4dfZDsx8Q4s7"
+      }
     },
     {
       "cell_type": "code",
@@ -54,6 +64,18 @@
         "else:\n",
         "    print(\"Das war leider nicht richtig :-(\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Mögliche Fortsetzung\n",
+        "\n",
+        "*   Eingegebene Gerade plotten\n",
+        "*   Gewichtsvektor einzeichnen"
+      ],
+      "metadata": {
+        "id": "KKOhYGh1RTiP"
+      }
     }
   ]
 }
