--- a/jupyternotebooks/LinClass.ipynb
+++ b/jupyternotebooks/LinClass.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOGM4igarcyPwtEqQ0tMRzB",
+      "authorship_tag": "ABX9TyPOUNxbh85swFuj2IKjxKlE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# LinClass\n",
+        "In diesem Notebook wird ein linearer Klassifizierer implementiert, der zwei Klassen voneinander trennen kann."
+      ],
+      "metadata": {
+        "id": "7CcndtWMR2C0"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -102,7 +112,7 @@
         "id": "w6_eGM2LJH38",
         "outputId": "98620745-98e3-4eb2-a986-0754eb7ab988"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -122,6 +132,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Training mit Gradientenabstieg\n",
+        "Ähnlich wie in https://github.com/ollihansen90/linclassifiers/blob/main/jupyternotebooks/Bestgerade.ipynb."
+      ],
+      "metadata": {
+        "id": "k1-jR4-PSH8I"
+      }
     },
     {
       "cell_type": "code",
@@ -153,7 +173,7 @@
         },
         "outputId": "cbed123e-82ce-40b3-8f0a-873fc1dc918c"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
